[package]
name = "dnstop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
pcap = "1.1"
rusqlite = "0.29"
tracing = "0.1"
tracing-subscriber = "0.3"
trust-dns-proto = "0.22"

[profile.release]
lto = "thin"
codegen-units = 4
strip = "debuginfo"
