[package]
name = "dnstop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
pcap = "1.1"
rusqlite = { version = "0.29", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-proto = "0.22"

[profile.release]
lto = "thin"
codegen-units = 4
strip = "debuginfo"
